# hertzian-dynamics

./: .gitignore  Cargo.toml  README.md
rf-core/: Cargo.toml  build.rs  shell.ps1
rf-core/examples/: am_roundtrip.rs  fft_spectrum.rs  fm_roundtrip.rs  gpu_fft_validate.rs  gpu_raycast_validate.rs  multipath_sweep.rs  noise_floor.rs  propagation_distance.rs  propagation_obstacle.rs  propagation_skywave.rs  spectrum_jammer_vs_voice.rs  spectrum_two_stations.rs  ssb_roundtrip.rs
rf-core/shaders/: fft_radix2.comp  raycast.comp  zoom_dft.comp
rf-core/src/: __notused  context.rs  error.rs  lib.rs
rf-core/src/compute/: gpu_raycast.rs  gpu_voxel.rs  mod.rs  raycast.rs
rf-core/src/dsp/: dc_block.rs  fft.rs  fft_gpu.rs  fir.rs  hilbert.rs  iir.rs  mod.rs  noise.rs  osc.rs  window.rs  zoom_dft.rs  (+1 more)
rf-core/tests/: dsp_fft.rs  dsp_fft_gpu.rs  dsp_fir.rs  dsp_iir.rs  dsp_modulation.rs  dsp_noise.rs  gpu_fft_validate.rs  propagation_curvature.rs  propagation_fading.rs  propagation_friis.rs  propagation_ionosphere.rs  propagation_knife_edge.rs  propagation_multipath.rs  propagation_obstacle.rs  propagation_reflection.rs  propagation_solver.rs  propagation_voxel.rs  spectrum_agc.rs  spectrum_basic.rs  spectrum_capture.rs  spectrum_doppler.rs  spectrum_interference.rs  spectrum_noise.rs  types.rs  vulkan_init.rs
rf-core/wincommands/: _common.ps1  _progress.ps1  _runner.ps1  cmd_build.ps1  cmd_check.ps1  cmd_clean.ps1  cmd_help.ps1  cmd_info.ps1  cmd_run.ps1  cmd_status.ps1  cmd_test.ps1  cmd_unlock.ps1
rf-jni/: Cargo.toml  build.rs
rf-jni/include/: rf_core.h
rf-jni/src/: compute.rs  core.rs  emission.rs  error.rs  grid.rs  handle.rs  ionosphere.rs  lib.rs  manager.rs  materials.rs  mix.rs  raycast.rs  receiver.rs  zoom_dft.rs
rf-jni/tests/: lifecycle.rs  mix_roundtrip.rs
(+199 files in other folders)
